--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
     </div>
 
     <div class="ts-col right">
-      <a href="#">THE ARCHIVE</a>
-      <a href="#">THE PROFILE</a>
+      <a href="archive.html">THE ARCHIVE</a>
+      <a href="profile">THE PROFILE</a>
     </div>
 
   </div>
