--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
     <div class="ts-col">
       <p>(MY EXPERTISE)</p>
-      <p>ART DIRECTION</p>
-      <p>WEB DESIGN + DEV</p>
-      <p>WEBFLOW DEVELOPMENT</p>
+      <p>UI/UX DESIGN</p>
+      <p>FRONTEND DEVELOPMENT</p>
+      <p>RESPONSIVE DEVELOPMENT</p>
     </div>
 
     <div class="ts-col">
@@ -81,13 +81,12 @@
     </div>
 
     <div class="ts-col right">
-      <a href="archive.html">THE ARCHIVE</a>
-      <a href="profile">THE PROFILE</a>
+      <a href="archive.html" style="cursor: none;">THE ARCHIVE</a>
+      <a href="profile" style="cursor: none;">THE PROFILE</a>
     </div>
 
   </div>
 </div>
-
 
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
