--- a/archive.html
+++ b/archive.html
@@ -71,7 +71,7 @@
 
         <div class="content">
             <div class="image-container">
-                <img src="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=800&q=80" alt="Mountain Landscape" class="main-image active" data-index="0">
+                <img src="pictures/download (52).jpg" alt="Mountain Landscape" class="main-image active" data-index="0">
                 <img src="https://images.unsplash.com/photo-1519681393784-d120267933ba?w=800&q=80" alt="Night Sky" class="main-image" data-index="1">
                 <img src="https://images.unsplash.com/photo-1469474968028-56623f02e42e?w=800&q=80" alt="Forest" class="main-image" data-index="2">
                 <img src="https://images.unsplash.com/photo-1439066615861-d1af74d74000?w=800&q=80" alt="Lake" class="main-image" data-index="3">
@@ -85,7 +85,7 @@
             <div class="sidebar-title">THIS SPACE HOLDS<br>PROJECTS<br>TESTS<br>VISUAL SYSTEMS</div>
             <div class="thumbnail-grid">
                 <div class="thumbnail" data-index="0">
-                    <img src="https://images.unsplash.com/photo-1506905925346-21bda4d32df4?w=200&q=80" alt="Thumb 1">
+                    <img src="pictures/download (52).jpg" alt="Thumb 1">
                 </div>
                 <div class="thumbnail" data-index="1">
                     <img src="https://images.unsplash.com/photo-1519681393784-d120267933ba?w=200&q=80" alt="Thumb 2">
