--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Loader -->
     <div class="loader-wrapper">
         <div class="loader-content">
-            <div class="loader-text">Sol.</div>
+            <div class="loader-text">SOL.</div>
         </div>
     </div>
 
@@ -82,7 +82,7 @@
 
     <div class="ts-col right">
       <a href="archive.html" style="cursor: none;">THE ARCHIVE</a>
-      <a href="profile" style="cursor: none;">THE PROFILE</a>
+      <a href="profile.html" style="cursor: none;">THE PROFILE</a>
     </div>
 
   </div>
