--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 
     <div class="ts-col">
       <p>NAVIGATE</p>
-      <p><a href="gallery.html" class="social-link">GALLERY</a></p>
       <p><a href="work.html" class="social-link">WORK</a></p>
+      <p><a href="archive.html" class="social-link">ARCHIVE</a></p>
       <p><a href="contact.html" class="social-link">CONTACTS</a></p>
     </div>
 
@@ -81,7 +81,6 @@
     </div>
 
     <div class="ts-col right">
-      <a href="archive.html" style="cursor: none;">THE ARCHIVE</a>
       <a href="profile.html" style="cursor: none;">THE PROFILE</a>
     </div>
 
